# room-mapping-ros2

./: .gitignore  ANALYZE_LATENCY.py  COMPLETE_INTEGRATION_GUIDE.md  CRITICAL_ANALYSIS_PHASES_2456.md  DELIVERABLES_INVENTORY.md  DELIVERY_COMPLETE.md  DIAGNOSTIC_REPORT.md  DOCUMENTATION_INDEX.md  GITHUB_PUSH_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  KEYBOARD_TELEOP_QUICK_START.md  KEYBOARD_TELEOP_SETUP.md  MICRO_ROS_CONFIG_GUIDE.md  PHASE2_UPGRADE_GUIDE.md  PHASE_1_3_SUMMARY.md  PHASE_2_4_5_6_IMPLEMENTATION_GUIDE.md  PHASE_2_DEPLOYMENT_SUMMARY.md  PHASE_2_VALIDATION_GUIDE.md  PHASE_5_SCAN_IMPROVEMENTS_GUIDE.md  PHASE_6_SYSTEM_VERIFICATION.md  PHYSICAL_VALIDATION_GUIDE.md  PHYSICAL_VALIDATION_REPORT.md  PID_TUNING_GUIDE.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_CARD.md  README.md  README_PHASE_1_3.md  ROS2_INTEGRATION_SUMMARY.md  ROS2_SETUP_GUIDE.md  SECURITY_CONFIG_GUIDE.md  START_HERE.md  SYSTEM_DIAGNOSTIC_REPORT.md  SYSTEM_STATE_DOCUMENTATION.txt  SYSTEM_VALIDATION_GUIDE.md  TELEOP_IMPLEMENTATION_GUIDE.md  TELEOP_QUICK_START.md  TELEOP_README.md  UPGRADE_SUMMARY.md  (+18 more)
robot_web_control/: app.py  config_template.py
sensor_testing/: CALIBRATION_GUIDE.md  ESP32_UPLOAD_SUCCESS.md  MOTOR_INTERACTIVE_GUIDE.md  MOTOR_PINOUT_REFERENCE.md  MOTOR_QUICKSTART.md  START_HERE.md  (+4 more)
src/my_robot_description/: package.xml  setup.cfg  setup.py
src/my_robot_description/launch/: teleop_keyboard_only.launch.py  teleop_robot.launch.py
src/my_robot_description/my_robot_description/: simple_teleop.py
src/my_robot_description/urdf/: my_robot.urdf
(+47 files in other folders)
